tests/types/errors/cast_string_as_int.mochi
// MEP-10 A5: `string as int` is rejected at type-check time (T046).
// Use the `int(...)` parsing builtin for an explicit conversion.
let n: int = "hello" as int
